# scical

./: README.md  pyproject.toml  runapp.py
config/: config.yaml
src/: __init__.py
src/backend/: __init__.py
src/backend/calculator/: __init__.py  calculator.py
src/backend/parser/: __init__.py  parser.py  token.py
src/backend/pathmanager/: __init__.py  pathmanager.py
src/frontend/: __init__.py
src/frontend/app/calculator/: calculator.py  configmanager.py  geometrymanager.py  makeupmanager.py
src/frontend/app/calculator/buttons/: __init__.py  appearance.py  buttongridmanager.py  buttongrids.py  buttons.py
src/frontend/app/calculator/keyboard/: __init__.py  textinputmanager.py
